Clean up notebooks and add channel position info

--- a/pretrain/senloc_file/channel_position_information.ipynb
+++ b/pretrain/senloc_file/channel_position_information.ipynb
@@ -1,15 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea3e5503-956f-4697-b7d7-5b2613ac1a7b",
+   "cell_type": "markdown",
+   "id": "7295d414-0a32-42c1-b951-3911ecacb4d8",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pickle\n",
-    "import numpy as np\n",
-    "import mne\n"
+    "# A simple tutorial on how to prepare your dataset's channel indices"
    ]
   },
   {
@@ -19,6 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pickle\n",
+    "import numpy as np\n",
+    "import mne\n",
     "mi_channels = ['Fp1', 'AF7', 'AF3', 'F1', 'F3', 'F5', 'F7', 'FT7', 'FC5', 'FC3', 'FC1',\n",
     "                'C1', 'C3', 'C5', 'T7', 'TP7', 'CP5', 'CP3', 'CP1', 'P1', 'P3', 'P5', 'P7',\n",
     "                'P9', 'PO7', 'PO3', 'O1', 'Iz', 'Oz', 'POz', 'Pz', 'CPz', 'Fpz', 'Fp2', 'AF8',\n",
@@ -180,9 +179,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (challenge)",
+   "display_name": "Python 3.11 (torch_env)",
    "language": "python",
-   "name": "challenge"
+   "name": "torch_env_py311"
   },
   "language_info": {
    "codemirror_mode": {
@@ -194,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
